--- a/pagine/news/PresNews/meteo.css
+++ b/pagine/news/PresNews/meteo.css
@@ -173,7 +173,7 @@ body{
     width: 450px;
     font-size: 25px;
     font-weight: bold;
-    font-family: "Forte";
+    font-family: "Itim";
     color: var(--black);
 }
 
