--- a/pagine/news/pres.css
+++ b/pagine/news/pres.css
@@ -78,7 +78,7 @@ body{
 #intestazione{
     position: absolute;
     z-index: 0;
-    top:250px;
+    top:150px;
     left:750px;
 }
 
@@ -97,12 +97,16 @@ body{
     position: absolute;
     height: 500px;
     z-index: 0;
-    top:300px;
-    left:10px;
-    font-size: 20px;
+    top: 200px;
+    margin-left:50px;
+    font-size: 18px;
     font-family: 'Goblin One', cursive;
-    line-height: 200%;
+    line-height: 250%;
     text-align: justify;
+}
+
+#introPres:hover{
+    transform: scale(1.07);
 }
 
 #paginaPres{
