--- a/pagine/news/PresNews/guerra.css
+++ b/pagine/news/PresNews/guerra.css
@@ -181,3 +181,11 @@ body{
     color: var(--link);
     transform: scale(1.10);
 }
+
+#NewsImg{
+    width: 75%;
+    height: 75%;
+    margin-top: 200px;
+    margin-left: 60px;
+    border-radius: 10px;
+}
