--- a/pagine/news/pres.css
+++ b/pagine/news/pres.css
@@ -150,6 +150,8 @@ body{
     margin-top: 0;
     height:800px;
     border-radius: 25px;
+    width: 25%;
+    height: 25%;
 }
 .newsT{
     margin-left: 30px;
