--- a/style.css
+++ b/style.css
@@ -294,7 +294,6 @@ body{
     border-radius: 25px;
     margin:0 auto;
     margin-left: 700px;
-    margin-top: 0px;
     margin-top: 50px;
 }
 
@@ -357,6 +356,87 @@ body{
 }
 
 #culturaInfo .button:hover{
+    transform: scale(1.02);
+    color: aquamarine;
+}
+
+
+/*Gallery*/
+
+#gallerysez{
+    width:350px;
+    height:250px;
+    background-color: var(--white);
+    border-radius: 25px;
+    margin:0 auto;
+    margin-right: 750px;
+    margin-top: 150px;
+}
+
+#galleryTitolino{
+    width: 190px;
+    background-color: black;
+    color: var(--white);
+    font-family: 'Permanent Marker', cursive;
+    font-size: 20px;
+    border-radius: 20px;
+    justify-content: center;
+    align-items: center;
+    margin-left: 80px;
+    margin-right: 85px;
+    padding-left: 25px;
+}
+
+
+#corpo4{
+    width:100%;
+    height:300px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    justify-self: center;
+}
+#galleryInfo{
+    width:100%;
+    height:100%;
+    padding-left: 0px;
+    display: inline-block;
+    height:250px;
+}
+#galleryT{
+    font-family: "itim";
+    color:var(--black);
+    font-weight: bold;
+    margin-bottom: 20px;
+    font-size:30px; 
+    width:100%;
+    text-align: center;
+}
+#galleryDesc{
+    color:var(--black);
+    font-size:20px;
+    margin-top:10px;
+    margin-bottom: 40px;
+    width:100%;
+    text-align: center;
+}
+#galleryInfo .button{
+    width:150px;
+    height:40px;
+    font-weight: bold;
+    font-family: 'Permanent Marker', cursive;
+    display: inline-flex;
+    margin-right: 20px;
+    margin-left: 100px;
+    margin-bottom: 10px;
+    color: var(--link);
+    background-color: var(--bluelectric);
+    border-radius: 10px;
+    align-items: center;
+    justify-content: center;
+}
+
+#galleryInfo .button:hover{
     transform: scale(1.02);
     color: aquamarine;
 }
