--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 *{
     padding: 0;
-    margin: 0;
+    margin: 0;;
 }
 
+        
 :root{
     --bluelectric: #2424F2;
     --ambeee: #E7A026;
@@ -18,7 +19,8 @@ body{
 }
 
 #sfondo1{
-    position: relative;
+    position: static;
+    margin-top: 70px;
     width: 100%;
     height: 100%;
     top: 70;
@@ -65,6 +67,50 @@ body{
     transform: scale(1.10);
 }
 
+/*MOBILE*/
+#menuIcon{
+    width: 30px;
+    cursor: pointer;
+    margin-right: 20px;
+    display: none;
+}
+@media only screen and (max-width:800px) {
+    #menuIcon{
+        display: block;
+    }
+    .menuTab{
+        display: none;
+    }
+}
+
+#mobileNav{
+    position: absolute;
+    width: 0%;
+    height: 100%;
+    background-color: var(--bluelectric);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    transition: all 0.5s ease-in-out;
+}
+
+.mobileTab{
+    width: 130px;
+    height: 40px;
+    background-color: var(--bluelectric);
+    color: white;
+    border-radius: 20px;
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Itim";
+}
+
+.mobileTab:hover{
+    transform: scale(1.10);
+}
 
 /*TITOLO*/
 
@@ -85,12 +131,14 @@ body{
 
 }
 #welcome{
+    position: relative;
     top: 15px;
     left: 30px;
 
 
 }
 #webeeeT{
+    position: relative;
    margin-top: 10px;
    left: 50px;
 }
