--- a/style.css
+++ b/style.css
@@ -148,8 +148,8 @@ body{
     height: auto;
     width: auto;
     position: relative;
-   margin-top: 10px;
-   left: 50px;
+    margin-top: 10px;
+    left: 50px;
 }
 
 @media only screen and (max-width:800px) {
@@ -159,6 +159,8 @@ body{
     #webeeeT{
         height: 27,5%;
         width: 45%;
+        left: 0;
+        margin-left: 10%;
     }
 }
 
