--- a/style.css
+++ b/style.css
@@ -76,6 +76,11 @@ body{
     margin-right: 20px;
     display: none;
 }
+
+#menuIcon:hover{
+    transform: scale(1.08);
+}
+
 @media only screen and (max-width:800px) {
     #menuIcon{
         display: block;
@@ -87,7 +92,7 @@ body{
 
 #mobileNav{
     position: relative;
-    margin-top: 20%;
+    margin-top: 15%;
     width: 100%;
     height: 100%;
     background-color: var(--bluelectric);
@@ -157,8 +162,8 @@ body{
         display: none;
     }
     #webeeeT{
-        height: 45%;
-        width: 73,63%;
+        height: 28%;
+        width: 46,7%;
         left: 0;
         margin-left: 10%;
     }
