--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
     margin: 0;;
 }
 
+@media only screen and (max-width:800px) {
+    *{
+        height: 100%;
+        width: 100%;
+    }
+}
         
 :root{
     --bluelectric: #2424F2;
@@ -165,7 +171,8 @@ body{
         height: 28%;
         width: 46,7%;
         left: 0;
-        margin-left: 10%;
+        margin-left: 2%;
+        margin-right: 0%;
     }
 }
 
