--- a/style.css
+++ b/style.css
@@ -158,15 +158,17 @@ body{
 
 @media only screen and (max-width:800px) {
     #intestazione{
-        height: 100%;
-        width: 100%;
+        height: 21%;
+        width: 35%;
+        margin-right: 20%;
+        margin-bottom: 50%;
     }
     #welcome{
         display: none;
     }
     #webeeeT{
-        height: 21%;
-        width: 35%;
+        height: 80%;
+        width: 100%;
         left: 0;
         margin-left: 2%;
         margin-right: 0%;
