--- a/pagine/news.css
+++ b/pagine/news.css
@@ -335,7 +335,7 @@ body{
 }
 
 .modsImgM{
-    width:calc(100% - 40px);
+    width:90%;
     height:170px;
     margin-top: 0px;
     margin-bottom: 10px;
@@ -345,4 +345,14 @@ body{
     justify-content: center;
     margin-top: 5%;
     border-radius: 5%;
+}
+
+#newspres{
+    width: 80%;
+    height: 85%;
+    margin-left: 20%;
+}
+
+#monna{
+    margin-left: 50%;
 }
