--- a/pagine/news/pres.css
+++ b/pagine/news/pres.css
@@ -19,10 +19,12 @@ body{
 
 #sfondo1{
     position: relative;
+    margin-top: 0px;
     width: 100%;
     height: 100%;
     top: 70;
     right: 0;
+    display: flex;
 }
 
 
@@ -65,6 +67,47 @@ body{
     transform: scale(1.10);
 }
 
+/*MOBILE*/
+#menuIcon{
+    width: 30px;
+    cursor: pointer;
+    margin-right: 20px;
+    display: none;
+}
+
+#menuIcon:hover{
+    transform: scale(1.08);
+}
+
+#mobileNav{
+    position: relative;
+    margin-top: 15%;
+    width: 100%;
+    height: 100%;
+    background-color: var(--bluelectric);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    transition: all 0.5s ease-in-out;
+}
+.mobileTab{
+    width: 130px;
+    height: 40px;
+    background-color: var(--bluelectric);
+    color: white;
+    font-size: 35px;
+    border-radius: 20px;
+    margin: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Itim";
+}
+
+.mobileTab:hover{
+    transform: scale(1.10);
+}
 
 /*TITOLO*/
 
@@ -90,6 +133,7 @@ body{
     margin-left: 300px;
 }
 
+
 /*PAGINA*/
 
 
@@ -105,8 +149,8 @@ body{
     text-align: justify;
 }
 
-#introPres:hover{
-    transform: scale(1.07);
+#introPresM{
+    display: none;
 }
 
 #paginaPres{
@@ -117,14 +161,14 @@ body{
     display: flex;
     flex-direction: column;
     top:100vh;
-    padding-left:10px;
+    padding-left:0px;
     padding-top: 0vh;
     
 }
 
 
 .notizia{
-    width:700px;
+    width:45%;
     height:auto;
     background-color: var(--white);
     margin: 60 60px;
@@ -174,3 +218,46 @@ body{
     text-align: left;
 }
 
+
+/*Responsive*/
+
+@media only screen and (max-width:800px) {
+    #menuIcon{
+        display: block;
+    }
+    .menuTab{
+        display: none;
+    }
+    #intestazione{
+        left: 0;
+        margin-left: 55%;
+    }
+    #welcome{
+        margin-left: 0%;
+        height: 50%;
+        width: 100%;
+    }
+    #introPres{
+        display: none;
+        width: 0;
+    }
+    #introPresM{
+        position: absolute;
+        height: 500px;
+        width: 80%;
+        z-index: 0;
+        top: 200px;
+        margin-left:2%;
+        padding-top: 3%;
+        font-size: 13px;
+        line-height: 15%;
+        font-family: 'Goblin One', cursive;
+        line-height: 250%;
+        text-align: left;
+        display: flex;
+    }
+
+    .notizia{
+        width: 90%;
+    }
+}
