--- a/pagine/news/pres.css
+++ b/pagine/news/pres.css
@@ -141,8 +141,8 @@ body{
     position: absolute;
     height: 500px;
     z-index: 0;
-    top: 200px;
-    margin-left:50px;
+    top: 220px;
+    margin-left:35px;
     font-size: 18px;
     font-family: 'Goblin One', cursive;
     line-height: 250%;
@@ -243,13 +243,13 @@ body{
     }
     #introPresM{
         position: absolute;
-        height: 500px;
-        width: 80%;
+        height: 100%;
+        width: 45%;
         z-index: 0;
         top: 200px;
         margin-left:2%;
         padding-top: 3%;
-        font-size: 13px;
+        font-size: 10px;
         line-height: 15%;
         font-family: 'Goblin One', cursive;
         line-height: 250%;
@@ -259,5 +259,6 @@ body{
 
     .notizia{
         width: 90%;
+        margin: 2% 2%;
     }
 }
