--- a/pagine/news/PresNews/NewsPres.css
+++ b/pagine/news/PresNews/NewsPres.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+    text-decoration: none;
 }
 
 :root{
@@ -118,10 +119,11 @@ body{
 
 
 #intestazione{
-    position: absolute;
+    position: relative;
     z-index: 0;
-    top:300px;
-    left:100px;
+    top: -60%;
+    left:5%;
+    width: 55%;
 }
 #TitoloNews{
     color:var(--black);
@@ -133,7 +135,7 @@ body{
 
 #SottoNews{
     color:var(--black);
-    margin-top:30;
+    margin-top:5%;
     font-size:30px;
     font-family: "Roboto Mono";
     line-height: 150%;  
@@ -150,20 +152,25 @@ body{
 }
 
 #datas{
-    margin-top: 50px;
-    font-size: 25px;
+    margin-top: 5%;
+    width: 140%;
+    font-size: 110%;
     font-family: "Roboto Mono";
     display: inline-flex;
     flex-direction: row;
 }
 
 #readingTime{
-    margin-right: 300px;
+    margin-right: 10%;
 }
 
 #owner{
-    margin-right: 300px;
+    margin-right: 10%;
     font-weight: bolder;
+}
+
+#dataora{
+    line-height: 160%;
 }
 
 
@@ -171,16 +178,16 @@ body{
 
 #paginaRazzo{
     background-color: var(--white);
-    margin-top: 50px;
+    margin-top: -36%;
     height: 1000px - auto;
     display: flex;
     flex-direction: row;
 }
 
 #testoNews{
-    padding-left: 100px;
-    padding-top: 200px;
-    width: 900px;
+    padding-left: 5%;
+    padding-top: 20%;
+    width: 60%;
     font-size: 30px;
     font-family: 'Mukta', sans-serif;
     line-height: 160%;
@@ -244,8 +251,13 @@ body{
     .menuTab{
         display: none;
     }
+    #TitoloNews{
+        font-size: 200%;
+    }
     #paginaRazzo{
         flex-direction: column;
+        margin-top: -40%;
+        width: 100%;
     }
     #NewsImg{
         display: none;
