--- a/pagine/gallery.css
+++ b/pagine/gallery.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+    text-decoration: none;
 }
 
 :root{
@@ -65,9 +66,60 @@ body{
     transform: scale(1.10);
 }
 
+/*MOBILE*/
+#menuIcon{
+    width: 30px;
+    cursor: pointer;
+    margin-right: 20px;
+    display: none;
+}
+
+#menuIcon:hover{
+    transform: scale(1.08);
+}
+
+@media only screen and (max-width:800px) {
+    #menuIcon{
+        display: block;
+    }
+    .menuTab{
+        display: none;
+    }
+}
+
+#mobileNav{
+    position: relative;
+    margin-top: 15%;
+    width: 100%;
+    height: 100%;
+    background-color: var(--bluelectric);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    transition: all 0.5s ease-in-out;
+}
+
+.mobileTab{
+    width: 130px;
+    height: 40px;
+    background-color: var(--bluelectric);
+    color: white;
+    font-size: 35px;
+    border-radius: 20px;
+    margin: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Itim";
+}
+
+.mobileTab:hover{
+    transform: scale(1.10);
+}
+
 
 /*TITOLO*/
-
 
 /*style="font-family: Forte;"*/
 @font-face {
@@ -90,6 +142,24 @@ body{
    left: 50px;
 }
 
+@media only screen and (max-width:800px) {
+    #intestazione{
+        height: 21%;
+        width: 35%;
+        margin-right: 20%;
+        margin-bottom: 50%;
+    }
+    #welcome{
+        display: none;
+    }
+    #webeeeT{
+        height: 80%;
+        width: 100%;
+        left: 0;
+        margin-left: 2%;
+        margin-right: 0%;
+    }
+}
 
 
 /*PAGINA Categorie*/
@@ -125,7 +195,7 @@ body{
 }
 
 .titleSezione{
-    width: 500px;
+    width: 29%;
     background-color: black;
     color: var(--white);
     font-family: 'Permanent Marker', cursive;
@@ -135,7 +205,7 @@ body{
     justify-content: center;
     align-items: center;
     margin-top: 50px;
-    margin-left: 500px;
+    margin-left: 35%;
     padding-left: 40px;
 }
 #tutteMods{
@@ -211,4 +281,20 @@ body{
 .button:hover{
     transform: scale(1.02);
     color: aquamarine;
+}
+
+
+@media only screen and (max-width:800px) {
+    .titleSezione{
+        width: 60%;
+        padding-left: 5%;
+        font-size: 120%;
+        margin-left: 18%;
+    }
+    #tutteMods{
+        flex-direction: column;
+    }
+    .mods{
+        margin: 4%;
+    }
 }
