--- a/pagine/news.css
+++ b/pagine/news.css
@@ -339,13 +339,16 @@ body{
     #paginaMods2{
         display: none;
     }
+    #tutteMods{
+        flex-direction: column;
+    }
 }
 
 .mobileMods{
-    width:33%;
+    width:60%;
     height:100%;
     background-color: var(--white);
-    margin: 0 40px;
+    margin: 4%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -354,24 +357,23 @@ body{
 }
 
 .modsImgM{
-    width:90%;
+    width: 95%;
     height:170px;
-    margin-top: 0px;
-    margin-bottom: 10px;
+    margin: 2% 4%;
     overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 5%;
+
     border-radius: 5%;
 }
 
 #newspres{
-    width: 80%;
-    height: 85%;
-    margin-left: 20%;
+    width: 100%;
+    height: 100%;
+    margin-left: -2%;
 }
 
 #monna{
-    margin-left: 50%;
+    margin-left: 0%;
 }
