--- a/pagine/gallery/baianotour.css
+++ b/pagine/gallery/baianotour.css
@@ -65,6 +65,57 @@ body{
     transform: scale(1.10);
 }
 
+/*MOBILE*/
+#menuIcon{
+    width: 30px;
+    cursor: pointer;
+    margin-right: 20px;
+    display: none;
+}
+
+#menuIcon:hover{
+    transform: scale(1.08);
+}
+
+@media only screen and (max-width:800px) {
+    #menuIcon{
+        display: block;
+    }
+    .menuTab{
+        display: none;
+    }
+}
+
+#mobileNav{
+    position: relative;
+    margin-top: 15%;
+    width: 100%;
+    height: 100%;
+    background-color: var(--bluelectric);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    transition: all 0.5s ease-in-out;
+}
+
+.mobileTab{
+    width: 130px;
+    height: 40px;
+    background-color: var(--bluelectric);
+    color: white;
+    font-size: 35px;
+    border-radius: 20px;
+    margin: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Itim";
+}
+
+.mobileTab:hover{
+    transform: scale(1.10);
+}
 
 /*TITOLO*/
 
@@ -87,16 +138,40 @@ body{
     top:200;
     font-size: 120px;
     line-height: 100%;
-    margin-left: 380px;
+    margin-left: 60%;
     width: 50%;
 }
+@media only screen and (max-width:800px) {
+    #intestazione{
+        height: 30%;
+        width: 50%;
+        left: 10%;
+        margin-right:  0%;
+        margin-bottom: 0%;;
+    }
+    #welcome{
+        display: flex;
+        margin-left: 50%;
+        box-shadow: black;
+        border-radius: 10%;
+    }
+    #webeeeT{
+        height: 80%;
+        width: 100%;
+        left: 0;
+        margin-left: 2%;
+        margin-right: 0%;
+    }
+}
 
+/*Pagina*/
 #introTour{
     position: absolute;
-    height: 500px;
+    height:30%;
+    width: 80%;
     z-index: 0;
-    top: 300px;
-    margin-left:50px;
+    top: 30%;
+    margin-left:5%;
     font-size: 18px;
     font-family: 'Goblin One', cursive;
     line-height: 250%;
@@ -104,27 +179,27 @@ body{
 }
 
 #paginaTour{
-    width:1537px;
-    height:300vh - auto;
+    width:97%;
+    height:100%;
     background-color: var(--ambeee);
     position: absolute;
     display: flex;
     flex-direction: column;
-    top:100vh;
+    top:140%;
     padding-left:10px;
     padding-top: 0vh;
     
 }
 .button{
-    width:150px;
+    width:50%;
     height:40px;
     font-weight: bold;
     font-family: 'Permanent Marker', cursive;
     display: inline-flex;
     margin-right: 20px;
-    margin-left: 570px;
+    margin-left: 50%;
     margin-bottom: 10px;
-    margin-top: -50px;
+    margin-top: 1%;
     color: var(--link);
     background-color: var(--bluelectric);
     color: var(--ambeee);
@@ -139,7 +214,8 @@ body{
     width:40%;
     height:40%;
     background-color: var(--black);
-    margin-left: 150px;
+    margin-top: 5%;
+    margin-left: 5%;
     margin-bottom: 50px;
     align-items: center;
     justify-content: center;
@@ -150,9 +226,24 @@ body{
     width:40%;
     height:40%;
     background-color: var(--black);
-    margin-left: 150px;
+    margin-top: 5%;
+    margin-left: 5%;
     margin-bottom: 50px;
     border-radius: 25px;
 
 }
 
+
+/*MOBILE*/
+@media only screen and (max-width:800px) {
+    body{
+        background-color: var(--ambeee);
+    }
+    #sfondo1{
+        display: none;
+    }
+    #introTour{
+        position: relative;
+        margin-top: 15%;
+    }
+}
