--- a/pagine/news/pres.css
+++ b/pagine/news/pres.css
@@ -172,17 +172,17 @@ body{
     width:45%;
     height:auto;
     background-color: var(--white);
-    margin: 60 60px;
+    margin: 5%;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: row;
+    flex-direction: column-reverse;
     border-radius: 25px;
 }
 .newsImg{
     width:calc(100% - 40px);
-    height:170px;
-    margin-right: 30px;
+    height:180px;
+    margin-right: 0px;
     margin-top: 0px;
     margin-bottom: 10px;
     overflow: hidden;
