--- a/pagine/news/pres.css
+++ b/pagine/news/pres.css
@@ -176,15 +176,13 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column-reverse;
+    flex-direction: row;
     border-radius: 25px;
 }
 .newsImg{
     width:calc(100% - 40px);
     height:180px;
-    margin-right: 0px;
-    margin-top: 0px;
-    margin-bottom: 10px;
+    margin: 4%;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -260,6 +258,6 @@ body{
 
     .notizia{
         width: 90%;
-        margin: 2% 2%;
+        flex-direction: column-reverse;
     }
 }
