--- a/pagine/gallery/baianotour.css
+++ b/pagine/gallery/baianotour.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+    text-decoration: none;
 }
 
 :root{
@@ -179,13 +180,13 @@ body{
 }
 
 #paginaTour{
-    width:97%;
-    height:100%;
+    width:99.3%;
+    height:500%;
     background-color: var(--ambeee);
     position: absolute;
     display: flex;
     flex-direction: column;
-    top:140%;
+    top:100%;
     padding-left:10px;
     padding-top: 0vh;
     
@@ -197,7 +198,7 @@ body{
     font-family: 'Permanent Marker', cursive;
     display: inline-flex;
     margin-right: 20px;
-    margin-left: 50%;
+    margin-left: 0%;
     margin-bottom: 10px;
     margin-top: 1%;
     color: var(--link);
@@ -212,7 +213,7 @@ body{
 }
 .foto{
     width:40%;
-    height:40%;
+    height:20%;
     background-color: var(--black);
     margin-top: 5%;
     margin-left: 5%;
@@ -224,7 +225,7 @@ body{
 
 .video{
     width:40%;
-    height:40%;
+    height:20%;
     background-color: var(--black);
     margin-top: 5%;
     margin-left: 5%;
@@ -245,5 +246,17 @@ body{
     #introTour{
         position: relative;
         margin-top: 15%;
+    }
+    #paginaTour{
+        top: 200%;
+        width: 90%;
+    }
+    .foto{
+        width: 90%;
+        height: 10%;
+    }
+    .video{
+        width: 90%;
+        height: 10%;
     }
 }
