--- a/pagine/news/PresNews/NewsPres.css
+++ b/pagine/news/PresNews/NewsPres.css
@@ -199,6 +199,15 @@ body{
     flex-direction: row;
 }
 
+#paginaLunga{
+    background-color: var(--white);
+    margin-top: -48%;
+    padding-top: 10%;
+    height: 500%;
+    display: flex;
+    flex-direction: row;
+}
+
 #testoNews{
     padding-left: 5%;
     padding-top: 15%;
@@ -251,6 +260,7 @@ body{
     margin-top: 200px;
     margin-left: 60px;
     border-radius: 10px;
+    display: none;
 }
 
 #NewsImgM{
@@ -300,6 +310,12 @@ body{
         flex-direction: column;
         margin-top: -115%;
         width: 100%;
+    }
+    #paginaLunga{
+        flex-direction: column;
+        margin-top: -150%;
+        padding-top: 2%;
+        height: 530%;
     }
     #testoNews{
         width: 85%;
