--- a/pagine/news/Musica/aiutatemi.css
+++ b/pagine/news/Musica/aiutatemi.css
@@ -66,6 +66,7 @@ body{
     transform: scale(1.10);
 }
 
+
 /*MOBILE*/
 #menuIcon{
     width: 30px;
@@ -76,6 +77,15 @@ body{
 
 #menuIcon:hover{
     transform: scale(1.08);
+}
+
+@media only screen and (max-width:800px) {
+    #menuIcon{
+        display: block;
+    }
+    .menuTab{
+        display: none;
+    }
 }
 
 #mobileNav{
@@ -89,6 +99,10 @@ body{
     align-items: center;
     overflow: hidden;
     transition: all 0.5s ease-in-out;
+}
+#mobileMenu{
+    margin-top: 60%;
+    margin-left: 20%;
 }
 .mobileTab{
     width: 130px;
@@ -119,10 +133,12 @@ body{
 
 
 #intestazione{
-    position: absolute;
+    position: relative;
     z-index: 0;
-    top:300px;
-    left:100px;
+    top: -60%;
+    left:5%;
+    width: 55%;
+    margin: 0;
 }
 #TitoloNews{
     color:var(--black);
@@ -134,7 +150,7 @@ body{
 
 #SottoNews{
     color:var(--black);
-    margin-top:30;
+    margin-top:5%;
     font-size:30px;
     font-family: "Roboto Mono";
     line-height: 150%;  
@@ -151,37 +167,51 @@ body{
 }
 
 #datas{
-    margin-top: 50px;
-    font-size: 25px;
+    margin-top: 5%;
+    width: 140%;
+    font-size: 110%;
     font-family: "Roboto Mono";
     display: inline-flex;
     flex-direction: row;
 }
 
 #readingTime{
-    margin-right: 300px;
+    margin-right: 10%;
 }
 
 #owner{
-    margin-right: 300px;
+    margin-right: 10%;
     font-weight: bolder;
+}
+
+#dataora{
+    line-height: 160%;
 }
 
 
 /*Testo Notizia*/
 
-#paginaRazzo{
+#paginaRazzo1{
     background-color: var(--white);
-    margin-top: 50px;
+    margin-top: -40%;
     height: 1000px - auto;
     display: flex;
     flex-direction: row;
 }
 
+#paginaLunga{
+    background-color: var(--white);
+    margin-top: -48%;
+    padding-top: 10%;
+    height: 500%;
+    display: flex;
+    flex-direction: row;
+}
+
 #testoNews{
-    padding-left: 100px;
-    padding-top: 200px;
-    width: 900px;
+    padding-left: 5%;
+    padding-top: 15%;
+    width: 60%;
     font-size: 30px;
     font-family: 'Mukta', sans-serif;
     line-height: 160%;
@@ -230,6 +260,15 @@ body{
     margin-top: 200px;
     margin-left: 60px;
     border-radius: 10px;
+    display: none;
+}
+
+#NewsImgM{
+    display: none;
+    width: 100%;
+    height: 0,75%;
+    border-radius: 10%;
+    box-shadow: var(--bluelectric);
 }
 
 @media only screen and (max-width:800px) {
@@ -277,7 +316,7 @@ body{
     }
     #paginaRazzo1{
         flex-direction: column;
-        margin-top: -95%;
+        margin-top: -100%;
         width: 100%;
     }
     #paginaLunga{
