--- a/pagine/news/PresNews/NewsPres.css
+++ b/pagine/news/PresNews/NewsPres.css
@@ -260,7 +260,17 @@ body{
     margin-top: 200px;
     margin-left: 60px;
     border-radius: 10px;
-    display: none;
+    display: flex;
+    flex-direction: column;
+}
+#NewsImgInterna{
+    width: 100%;
+    height: 15%;
+    margin-top: 8%;
+    margin-left: 0%;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
 }
 
 #NewsImgM{
@@ -269,6 +279,14 @@ body{
     height: 0,75%;
     border-radius: 10%;
     box-shadow: var(--bluelectric);
+}
+.ImgM{
+    display: none;
+}
+#ImgDesc{
+    margin: 2% 17%;
+    font-size: 130%;
+    font-family: "Itim";
 }
 
 @media only screen and (max-width:800px) {
@@ -323,6 +341,12 @@ body{
     }
     #NewsImg{
         display: none;
+    }
+    #NewsImgInterna{
+        display: none;
+    }
+    .ImgM{
+        display: flex;
     }
     #NewsImgM{
         display: flex;
