--- a/pagine/news/PresNews/NewsPres.css
+++ b/pagine/news/PresNews/NewsPres.css
@@ -347,6 +347,7 @@ body{
     }
     .ImgM{
         display: flex;
+        flex-direction: column-reverse;
     }
     #NewsImgM{
         display: flex;
