Responsive Softair.html 1.1

--- a/pagine/news/PresNews/NewsPres.css
+++ b/pagine/news/PresNews/NewsPres.css
@@ -345,6 +345,9 @@ body{
     #NewsImgInterna{
         display: none;
     }
+    .ImgCompleta{
+        display: none;
+    }
     .ImgM{
         display: flex;
         flex-direction: column-reverse;
