--- a/pagine/gallery.css
+++ b/pagine/gallery.css
@@ -40,12 +40,27 @@ body{
     width:50px;
     position: absolute;
     left:20px;
-    transition: transform 0.2s ease-in-out;
+    margin-top: -1.5%;
     cursor: pointer;
+}
+
+/*TopSecret*/
+#schermo{
+    position: relative;
+    margin-top: 15%;
+    width: 100%;
+    height: 100%;
+    background-color: var(--bluelectric);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    transition: all 0.5s ease-in-out;
 }
 
 #logo:hover{
     transform: scale(1.10);
+    transform: rotateX(180deg);
 }
 #menu{
     display: flex;
@@ -196,7 +211,7 @@ body{
 }
 
 .titleSezione{
-    width: 29%;
+    width: 25.5%;
     background-color: black;
     color: var(--white);
     font-family: 'Permanent Marker', cursive;
@@ -206,8 +221,8 @@ body{
     justify-content: center;
     align-items: center;
     margin-top: 50px;
-    margin-left: 35%;
-    padding-left: 40px;
+    margin-left: 37%;
+    padding: 0% 1%;
 }
 #tutteMods{
     width: 100%;
@@ -231,19 +246,19 @@ body{
     border-radius: 25px;
 }
 .modsImg{
-    width:calc(100% - 40px);
-    height:170px;
-    margin-top: 0px;
-    margin-bottom: 10px;
-    overflow: hidden;
+    width: 85%;
+    height: 50%;
+    margin: 4%;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 0%;
 }
-.modslImg img{
-    margin-top: 500;
-    height:400px;
-
+.modsImg img{
+    margin: 0%;
+    height:100%;
+    width: 100%;
+    border-radius: 20%;
 }
 .modsT{
     font-family: "Itim";
