--- a/pagine/news/PresNews/NewsPres.css
+++ b/pagine/news/PresNews/NewsPres.css
@@ -263,6 +263,15 @@ body{
     display: flex;
     flex-direction: column;
 }
+#NewsImgQuad{
+    width: 75%;
+    height: 22%;
+    margin-top: 200px;
+    margin-left: 60px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+}
 #NewsImgInterna{
     width: 100%;
     height: 15%;
